Fix "Open in" feature to treat downloading corrupted files as failure.

Also fixed "Open in" unit test as the existing test was already passing a
corrupted PDF data to the UrlLoader. the reason was that the generated
pdf data had null characters, So when casting it to char* then converting
that to string it produced 8 letters Data stream.

Added unittest for the corrupted pdf case.

Bug: 892211
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I4fff1e22f617e6a0b2c08d9c6412e14265b8aab4
Reviewed-on: https://chromium-review.googlesource.com/c/1261926
Commit-Queue: Mohammad Refaat <mrefaat@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596918}
Former-commit-id: 38a17abcb0954496c6c655388e9d199242a5d725